<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">小溪Demo</string>
    <string name="app_name1">小溪1</string>
    <string name="app_version">版本号%1$s</string>
    <string name="licence"> \&#064;中国移动版权所有</string>
    <string name="hint_loading_data">正在获取数据，请稍候</string>
    <string name="hint_loading">努力加载中，请稍候</string>
    <string name="hint_network_disconnection">网络已经断开</string>
    <string name="hint_network_connected">网络已恢复，连接到%1$s网络</string>
    <string name="hint_network_error">网络不通，请检查网络设置</string>
    <string name="toast_can_not_deal_with_picture">无法获得图片，请重试</string>
    <string name="tab_message">信息</string>
    <string name="tab_ads">通讯录</string>
    <string name="tab_mail">邮箱</string>
    <string name="tab_apply">应用中心</string>
    <string name="tab_more">更多</string>
    <string name="login">登   录</string>
    <string name="register">注   册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="select">选择</string>
    <string name="hint_confirm_password">确认密码(必填)</string>
    <string name="select_company">请选择本次登陆的企业</string>
    <string name="pic_full_size">原图</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="hint_username_register">用户名(必填,1-50位,数字,字母或下划线)</string>
    <string name="hint_password_register">密码(必填,6-32位,数字,字母或特殊符号)</string>
     <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_nickname">昵称(数字,字母或下划线)</string>
    <string name="hint_phone">手机号(必填)</string>
    <string name="hint_check_input_error">%1$s不能为空</string>
    <string name="hint_check_phone_num_error">请输入正确的手机号，如%1$s</string>
    <string name="hint_logining">正在登录</string>
    <string name="dialog_title_default">操作确认</string>
    <string name="dialog_msg_default">您确定进行此操作吗?</string>
    <string name="dialog_edit_msg_default">请输入群名称</string>
    <string name="dialog_title_offline">下线提示</string>
    <string name="quit_app">退出登录</string>
    <string name="quit">退出</string>
    <string name="hint_quit">正在退出应用</string>
    <string name="hint_quit_confirm">确定退出自研IM？</string>
    <string name="logout">退出登录</string>
    <string name="logout_tip">确定退出当前账户吗?</string>
    <string name="change_num_tip">更改手机号</string>
    <string name="change_nick_name">更改昵称</string>
    <string name="null_nick_name">昵称不能为空</string>
    <string name="hint_logouting">正在退出当前账户</string>
    <string name="hint_refresh">请点击此处重试</string>
    <string name="hint_offline">您的账户已经在其他终端登录</string>
    <string name="hint_destroyed">您的账号已失效，请联系管理员</string>
    <string name="hint_sdk_init_fail">客户端初始化失败,请检查系统时间！</string>
    <string name="find_psd">忘记密码</string>
    <string name="get_try_account_text">获取体验账号</string>
    <string name="find_psd_tips">请填写您的手机号，我们会将密码以短信的形式发送至您的手机。</string>
    <string name="your_phone_num">您的手机号,如13800000000</string>
    <string name="hint_send_request">发送请求中，请稍候</string>
    <string name="modify_psd">修改密码</string>
    <string name="current_psd">当前密码</string>
    <string name="new_psd">新密码</string>
    <string name="confirm_new_psd">确认新密码</string>
    <string name="hint_commit">提交中...</string>
    <string name="hint_modify_psd_succ">密码修改成功</string>
    <string name="hint_modify_psd_failed">密码修改失败</string>
    <string name="hint_new_same_to_old">新密码不能与旧密码相同</string>
    <string name="hint_confirm_new_psd">再次输入新密码</string>
    <string name="hint_new_psd_different">两次输入的新密码不一致</string>
    <string name="hint_psd_length_error">密码长度必须长于6个字符</string>
    <string name="xmpp_host">218.205.81.27</string>
    <string name="xmpp_service_name">li726-26</string>
    <string name="xmpp_conference_service_name">conference.li726-26</string>
    <string name="xmpp_smack_resource">Smack</string>
    <string name="xmpp_spark_resource">Spark 2.6.3</string>
    <string name="login_failue">登录失败</string>
    <string name="contact_title">通讯录</string>
    <string name="contact_search">搜索</string>
    <string name="contact_pinyin_a">A</string>
    <string name="contact_pinyin_b">B</string>
    <string name="contact_pinyin_c">C</string>
    <string name="contact_pinyin_d">D</string>
    <string name="contact_pinyin_e">E</string>
    <string name="contact_pinyin_f">F</string>
    <string name="contact_pinyin_g">G</string>
    <string name="contact_pinyin_h">H</string>
    <string name="contact_pinyin_i">I</string>
    <string name="contact_pinyin_j">J</string>
    <string name="contact_pinyin_k">K</string>
    <string name="contact_pinyin_l">L</string>
    <string name="contact_pinyin_m">M</string>
    <string name="contact_pinyin_n">N</string>
    <string name="contact_pinyin_o">O</string>
    <string name="contact_pinyin_p">P</string>
    <string name="contact_pinyin_q">Q</string>
    <string name="contact_pinyin_r">R</string>
    <string name="contact_pinyin_s">S</string>
    <string name="contact_pinyin_t">T</string>
    <string name="contact_pinyin_u">U</string>
    <string name="contact_pinyin_v">V</string>
    <string name="contact_pinyin_w">W</string>
    <string name="contact_pinyin_x">X</string>
    <string name="contact_pinyin_y">Y</string>
    <string name="contact_pinyin_z">Z</string>
    <string name="contact_apply_and_notify">申请与通知</string>
    <string name="contacts_search_hint">搜索联系人</string>
    <string name="add_contact_hint">用户名</string>
    <string name="add_contact">添加好友</string>
    <string name="add_contact_msg">发送请求成功，等待对方验证</string>
    <string name="apply_and_notify">申请与通知</string>
    <string name="choose_contact">选择联系人</string>
    <string name="choose_group_member">选择要@的人</string>
    <string name="delete_contact">删除联系人</string>
    <string name="delete_contact_confirm_msg">确定删除联系人\"%1$s\"？</string>
    <string name="local_search_contact_no_result_text">没有匹配的联系人</string>
    <string name="location">位置</string>
    <string name="location_send">发送</string>
    <string name="contact_pinyin_other">#</string>
    <string name="contact_rssid">订阅号</string>
    <string name="contact_select_group">选择一个群</string>
    <string name="contact_serviceid">服务号</string>
    <string name="organization">单位</string>
    <string name="group">群</string>
    <string name="discuss">讨论组</string>
    <string name="contact_groups">群聊</string>
    <string name="message">消息</string>
    <string name="historymessage">历史聊天记录</string>
    <string name="conversation">会话</string>
    <string name="commoncontacts">常用联系人</string>
    <string name="add_commoncontacts">添加为常用联系人</string>
    <string name="save_to_local">保存到本地</string>
    <string name="data_is_null">数据为空</string>
    <string name="data_is_not_number">号码必须为数字</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="cancel_commoncontacts">取消常用联系人</string>
    <string name="commoncontacts_failure">常用联系人操作失败</string>
    <string name="cancel_commoncontacts_succeed">取消常用联系人成功</string>
    <string name="add_commoncontacts_succeed">增加常用联系人成功</string>
    <string name="save_local_succeed">保存本地成功</string>
    <string name="local_data_exist">联系人已存在</string>
    <string name="save_local_failure">保存本地失败</string>
    <string name="contactorphone_is_null">联系人或者手机号为空</string>
    <string name="loading_contacts_data">正在初始化联系人，请稍候</string>
    <string name="init_lookup_keys">正在优化通讯录检索速度，请稍候</string>
	<string name="search_contacts">单聊</string>
    <string name="search_multi">群发消息</string>
	<string name="search_groups">群聊</string>
	<string name="search_message">消息记录</string>
	<string name="setting">设置</string>
	<string name="new_msg_notify">新消息提醒</string>
	<string name="new_msg_notify_receive">接收新消息通知</string>
	<string name="ignore_group_message">接收群消息提醒</string>
	<string name="ignore_message">接收新消息提醒</string>
	<string name="new_msg_notify_voice_on_off">声音</string>
	<string name="new_msg_notify_vibration_on_off">振动</string>
	<string name="message_chat_setting">聊天设置</string>
	<string name="ll_conversation_setting">通话设置</string>
	<string name="loudspeaker_setting">使用扬声器播放声音</string>
	<string name="user_phonenum_setting">绑定手机号</string>
	<string name="user_phonenum">13717876101</string>
    <string name="more">更多</string>
    <string name="personal_cloud_pan">个人云盘</string>
    <string name="department_cloud_pan">部门云盘</string>
    <string name="function">功能</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="new_msg_notify_show_detail">通知显示消息详情</string>
    <string name="clean_cache">清空缓存</string>
    <string name="confirm_clean_cache">确认清空缓存？</string>
    <string name="hint_clean_cache">缓存数据清空完毕</string>
    <string name="cloud_pan_setting">云盘设置</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="invite_experience">邀请体验</string>
    <string name="send_msg_fail">短信发送失败</string>
    <string name="send_msg_success">短信发送成功</string>
    <string name="invite_fail">邀请失败</string>
    <string name="invite_tip">邀请朋友体验，请输入朋友的手机号码</string>
    <string name="edittext_hint">请输入11位手机号码</string>
    <string name="confirm_invite">确认邀请</string>
    <string name="check_update">检查更新</string>
    <string name="feedback_input_title">您的意见或建议:</string>
    <string name="hint_feedback_input">请输入反馈(%1$d字以内)</string>
    <string name="feedback_input">反馈内容</string>
    <string name="hint_feedback_suc">提交成功，感谢您的反馈</string>
    <string name="commit">提交</string>
    <string name="personal_information">个人信息</string>
    <string name="system_details">通知详情</string>
    <string name="photo">头像</string>
    <string name="getphoto">头像图片来源</string>
    <string name="name">姓名</string>
    <string name="duty">职位</string>
    <string name="department">部门</string>
    <string name="email">邮箱</string>
    <string name="mail_login">登录</string>
    <string name="email_password_config">邮箱登录</string>
    <string name="fixed_phone">座机号</string>
    <string name="short_number">短号</string>
    <string name="fixed_phone_simple">座机</string>
    <string name="mobile_phone">手机号</string>
    <string name="mobile_phone_number">手机：</string>
    <string name="mobile_phone_simple">手机</string>
    <string name="weibo">微博</string>
    <string name="qr_code_card">二维码名片</string>
    <string name="append_to_chat">邀请他人加入聊天</string>
    <string name="hint_failed_get_profile">获取个人信息失败</string>
    <string name="mail_config">邮箱设置</string>
    <string name="new_mail_notify">新邮件提醒</string>
    <string name="new_mail_ring">铃声</string>
    <string name="new_mail_vibrate">振动</string>
    <string name="new_mail_avoid_disturbing">免打扰</string>
    <string name="new_mail_avoid_disturbing_text">免打扰时间段内，收到新邮件提醒不振动，不发出声音</string>
    <string name="new_mail_avoid_disturbing_start">开始</string>
    <string name="new_mail_avoid_disturbing_end">结束</string>
    <string name="new_mail_auto_refresh">自动刷新</string>
    <string name="new_mail_auto_refresh_rate">刷新频率</string>
    <string name="hint_uploading_avst">正在上传头像...</string>
    <string name="hint_uploading_succeed">设定头像成功</string>
    <string name="hint_uploading_failed">设定失败，网络错误</string>
    <string name="hint_uploading_file_too_large">设定失败，图像大小不能超过2M</string>
    <string name="config_set_avst">设定图片</string>
    <string name="dialog_groupname_modify">修改群名称</string>
    <string name="upgrade">升级</string>
    <string name="upgrade_tip">升级提示</string>
    <string name="upgrade_force">强制升级</string>
    <string name="cur_version">当前版本(%1$s)</string>
    <string name="upgrade_version_tip">更新至新版本%1$s</string>
    <string name="find_new_version">发现新版本%1$s,是否立即更新？</string>
    <string name="find_new_version_short">发现新版本(%1$s)</string>
    <string name="download_progress">下载进度</string>
    <string name="menu_mark_top_group">聊天置顶</string>
    <string name="menu_mark_ignore">屏蔽消息</string>
    <string name="menu_save_to">保持到群组列表</string>
    <string name="clear_chat_records">删除聊天记录</string>
    <string name="add_chat_black">加入黑名单</string>
</resources>